After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 753724 - Connection dialog doesn't use cached session size
Connection dialog doesn't use cached session size
Status: RESOLVED FIXED
Product: vinagre
Classification: Applications
Component: RDP
unspecified
Other Linux
: Normal normal
: ---
Assigned To: vinagre-maint
vinagre-maint
Depends on:
Blocks:
 
 
Reported: 2015-08-17 16:20 UTC by Marek Kašík
Modified: 2015-08-21 08:15 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Use cached session size for RDP (2.02 KB, patch)
2015-08-17 16:20 UTC, Marek Kašík
committed Details | Review

Description Marek Kašík 2015-08-17 16:20:49 UTC
Created attachment 309398 [details] [review]
Use cached session size for RDP

RDP plugin doesn't get session size from cached preferences so the user has to set the size every time he connects to remote Windows machine.
Attached patch fixes this.
Comment 1 David King 2015-08-21 08:14:50 UTC
Review of attachment 309398 [details] [review]:

Pushed to master as commit d4f6461a0887e9a137228fd20df7bb1e22345658, with a minor change to the commit message.