Use cached session size for RDP

Get width and height from cache when creating freerdp session.

https://bugzilla.gnome.org/show_bug.cgi?id=753724